--- a/AdminWebiste/AdminWebiste/Views/Layouts/AdminLayout.cshtml
+++ b/AdminWebiste/AdminWebiste/Views/Layouts/AdminLayout.cshtml
@@ -2,6 +2,7 @@
 
 <html>
 <head>
+    <title>@ViewBag.Title</title>
     <meta name="viewport" content="width=device-width" />
     @* Css, Boostrap *@
     <!-- Bootstrap -->
