--- a/AdminWebiste/AdminWebiste/Views/Home/Index.cshtml
+++ b/AdminWebiste/AdminWebiste/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
     ViewBag.Title = "Index";
-    Layout = "~/Views/Home/AdminLayout.cshtml";
+    Layout = "~/Views/Layouts/AdminLayout.cshtml";
 }
 
