--- a/AdminWebiste/AdminWebiste/Views/Layouts/AdminLayout.cshtml
+++ b/AdminWebiste/AdminWebiste/Views/Layouts/AdminLayout.cshtml
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width" />
     @* Css, Boostrap *@
     <!-- Bootstrap -->
-    <link href="~/Layout/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="~/Content/Layout/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Font Awesome -->
-    <link href="~/Layout/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="~/Content/Layout/font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <!-- NProgress -->
-    <link href="~/Layout/nprogress/nprogress.css" rel="stylesheet">
+    <link href="~/Content/Layout/nprogress/nprogress.css" rel="stylesheet">
     <!-- bootstrap-daterangepicker -->
-    <link href="~/Layout/bootstrap-daterangepicker/daterangepicker.css" rel="stylesheet">
+    <link href="~/Content/Layout/bootstrap-daterangepicker/daterangepicker.css" rel="stylesheet">
 
     <!-- Custom Theme Style -->
     <link href="~/Content/custom.min.css" rel="stylesheet">
@@ -772,32 +772,32 @@
     </div>
 
     <!-- jQuery -->
-    <script src="~/Layout/jquery/dist/jquery.min.js"></script>
+    <script src="~/Content/Layout/jquery/dist/jquery.min.js"></script>
     <!-- Bootstrap -->
-    <script src="~/Layout/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="~/Content/Layout/bootstrap/dist/js/bootstrap.min.js"></script>
     <!-- FastClick -->
-    <script src="~/Layout/fastclick/lib/fastclick.js"></script>
+    <script src="~/Content/Layout/fastclick/lib/fastclick.js"></script>
     <!-- NProgress -->
-    <script src="~/Layout/nprogress/nprogress.js"></script>
+    <script src="~/Content/Layout/nprogress/nprogress.js"></script>
     <!-- Chart.js -->
-    <script src="~/Layout/Chart.js/dist/Chart.min.js"></script>
+    <script src="~/Content/Layout/Chart.js/dist/Chart.min.js"></script>
     <!-- jQuery Sparklines -->
-    <script src="~/Layout/jquery-sparkline/dist/jquery.sparkline.min.js"></script>
+    <script src="~/Content/Layout/jquery-sparkline/dist/jquery.sparkline.min.js"></script>
     <!-- Flot -->
-    <script src="~/Layout/Flot/jquery.flot.js"></script>
-    <script src="~/Layout/Flot/jquery.flot.pie.js"></script>
-    <script src="~/Layout/Flot/jquery.flot.time.js"></script>
-    <script src="~/Layout/Flot/jquery.flot.stack.js"></script>
-    <script src="~/Layout/Flot/jquery.flot.resize.js"></script>
+    <script src="~/Content/Layout/Flot/jquery.flot.js"></script>
+    <script src="~/Content/Layout/Flot/jquery.flot.pie.js"></script>
+    <script src="~/Content/Layout/Flot/jquery.flot.time.js"></script>
+    <script src="~/Content/Layout/Flot/jquery.flot.stack.js"></script>
+    <script src="~/Content/Layout/Flot/jquery.flot.resize.js"></script>
     <!-- Flot plugins -->
-    <script src="~/Layout/flot.orderbars/js/jquery.flot.orderBars.js"></script>
-    <script src="~/Layout/flot-spline/js/jquery.flot.spline.min.js"></script>
-    <script src="~/Layout/flot.curvedlines/curvedLines.js"></script>
+    <script src="~/Content/Layout/flot.orderbars/js/jquery.flot.orderBars.js"></script>
+    <script src="~/Content/Layout/flot-spline/js/jquery.flot.spline.min.js"></script>
+    <script src="~/Content/Layout/flot.curvedlines/curvedLines.js"></script>
     <!-- DateJS -->
-    <script src="~/Layout/DateJS/build/date.js"></script>
+    <script src="~/Content/Layout/DateJS/build/date.js"></script>
     <!-- bootstrap-daterangepicker -->
-    <script src="~/Layout/moment/min/moment.min.js"></script>
-    <script src="~/Layout/bootstrap-daterangepicker/daterangepicker.js"></script>
+    <script src="~/Content/Layout/moment/min/moment.min.js"></script>
+    <script src="~/Content/Layout/bootstrap-daterangepicker/daterangepicker.js"></script>
 
     <!-- Custom Theme Scripts -->
     <script src="~/Scripts/custom.min.js"></script>
