--- a/BMWAdmin/BMWAdmin/Views/Admin/AdminLayouts.cshtml
+++ b/BMWAdmin/BMWAdmin/Views/Admin/AdminLayouts.cshtml
@@ -10,7 +10,7 @@
     <link id="base-style" href="~/Layouts/css/style.css" rel="stylesheet">
     <link id="base-style-responsive" href="~/Layouts/css/style-responsive.css" rel="stylesheet">
     <link href="~/Content/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
-    <title>AdminLayouts</title>
+    <title>@ViewBag.Title</title>
 </head>
 <body>
     <!-- start: Header -->
