--- a/BMWAdmin/BMWAdmin/Views/Admin/AdminLayouts.cshtml
+++ b/BMWAdmin/BMWAdmin/Views/Admin/AdminLayouts.cshtml
@@ -306,7 +306,7 @@
                     <ul class="nav nav-tabs nav-stacked main-menu">
                         <li><a href="index.html"><i class="fa fa-home" aria-hidden="true"></i><span class="hidden-tablet"> Trang chủ</span></a></li>
                         <li><a href="messages.html"><i class="fa fa-user-circle" aria-hidden="true"></i><span class="hidden-tablet">  Quản lý người dùng</span></a></li>
-                        <li><a href="tasks.html"><i class="fa fa-building" aria-hidden="true"></i><span class="hidden-tablet">  Quản lý danh mục</span></a></li>
+                        <li><a href="@Url.Action("Index","SysCategories")"><i class="fa fa-building" aria-hidden="true"></i><span class="hidden-tablet">  Quản lý danh mục</span></a></li>
                         <li><a href="ui.html"><i class="fa fa-cart-plus" aria-hidden="true"></i><span class="hidden-tablet">  Quản lý sản phẩm</span></a></li>
                         <li><a href="widgets.html"><i class="icon-dashboard"></i><span class="hidden-tablet"> Quản lý nhà sản xuất</span></a></li>
 
